--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/inter-tight": "^4.5.0",
+		"@fontsource/roboto": "^4.5.8",
+		"leaflet": "^1.9.2",
+		"svelte-feather-icons": "^4.0.0"
+	}
 }
