--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
+		"svelte-adapter-firebase": "^0.14.4",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.2",
@@ -32,6 +33,7 @@
 	"dependencies": {
 		"@fontsource/inter-tight": "^4.5.0",
 		"@fontsource/roboto": "^4.5.8",
+		"@sveltejs/adapter-static": "^1.0.0-next.48",
 		"leaflet": "^1.9.2",
 		"svelte-feather-icons": "^4.0.0"
 	}
