--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@playwright/test": "1.25.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@types/leaflet": "^1.9.0",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.18",
 		"prettier": "^2.6.2",
