--- a/public/vite-manifest.json
+++ b/public/vite-manifest.json
@@ -1,68 +1,109 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-fb7546da.js",
+    "file": "_app/immutable/start-b87ec3f3.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-3942bca1.js",
-      "_singletons-dd9f288a.js",
+      "_index-423627b2.js",
+      "_singletons-59c61bb8.js",
       "_preload-helper-b21cceae.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js"
+      ".svelte-kit/generated/nodes/2.js",
+      ".svelte-kit/generated/nodes/3.js",
+      ".svelte-kit/generated/nodes/4.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-46fcf987.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-118fb1cf.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-3942bca1.js"
+      "_index-423627b2.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-bd745b01.css"
+      "_app/immutable/assets/_layout-31c9014b.css"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-1f7065a9.js",
+    "file": "_app/immutable/components/error.svelte-16cda11f.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-3942bca1.js",
-      "_singletons-dd9f288a.js"
+      "_index-423627b2.js",
+      "_singletons-59c61bb8.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-89217a06.js",
+    "file": "_app/immutable/components/pages/_page.svelte-c536d20b.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-3942bca1.js",
-      "_preload-helper-b21cceae.js"
-    ],
-    "dynamicImports": [
-      "_leaflet-src-a1dff1fc.js"
+      "_index-423627b2.js",
+      "_secondaryButton-8ca68d79.js",
+      "_map-8540a5c1.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-025cd789.css"
+      "_app/immutable/assets/_page-c901883e.css"
     ]
   },
-  "_singletons-dd9f288a.js": {
-    "file": "_app/immutable/chunks/singletons-dd9f288a.js",
+  "src/routes/new/+page.svelte": {
+    "file": "_app/immutable/components/pages/new/_page.svelte-1a0538bb.js",
+    "src": "src/routes/new/+page.svelte",
+    "isEntry": true,
     "imports": [
-      "_index-3942bca1.js"
+      "_index-423627b2.js",
+      "_secondaryButton-8ca68d79.js",
+      "_map-8540a5c1.js"
+    ],
+    "css": [
+      "_app/immutable/assets/newSideBar-854aff46.css"
     ]
   },
-  "_index-3942bca1.js": {
-    "file": "_app/immutable/chunks/index-3942bca1.js"
+  "src/routes/view/+page.svelte": {
+    "file": "_app/immutable/components/pages/view/_page.svelte-8a945378.js",
+    "src": "src/routes/view/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-423627b2.js",
+      "_map-8540a5c1.js"
+    ],
+    "css": [
+      "_app/immutable/assets/newSideBar-854aff46.css"
+    ]
+  },
+  "_singletons-59c61bb8.js": {
+    "file": "_app/immutable/chunks/singletons-59c61bb8.js",
+    "imports": [
+      "_index-423627b2.js"
+    ]
+  },
+  "_index-423627b2.js": {
+    "file": "_app/immutable/chunks/index-423627b2.js"
   },
   "_preload-helper-b21cceae.js": {
     "file": "_app/immutable/chunks/preload-helper-b21cceae.js"
   },
+  "_map-8540a5c1.js": {
+    "file": "_app/immutable/chunks/map-8540a5c1.js",
+    "imports": [
+      "_index-423627b2.js",
+      "_preload-helper-b21cceae.js"
+    ],
+    "dynamicImports": [
+      "_leaflet-src-a1dff1fc.js"
+    ]
+  },
+  "_secondaryButton-8ca68d79.js": {
+    "file": "_app/immutable/chunks/secondaryButton-8ca68d79.js",
+    "imports": [
+      "_index-423627b2.js"
+    ]
+  },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-17037473.js",
+    "file": "_app/immutable/chunks/0-9eb3d3e4.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -70,7 +111,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-a8a1e533.js",
+    "file": "_app/immutable/chunks/1-09e4da4d.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -78,23 +119,43 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-53796b79.js",
+    "file": "_app/immutable/chunks/2-fc8e8f51.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/+page.svelte"
     ]
   },
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-ee624524.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/new/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-d27f515d.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/view/+page.svelte"
+    ]
+  },
   "_leaflet-src-a1dff1fc.js": {
     "file": "_app/immutable/chunks/leaflet-src-a1dff1fc.js",
     "isDynamicEntry": true
   },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-c901883e.css",
+    "src": "src/routes/+page.css"
+  },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-bd745b01.css",
+    "file": "_app/immutable/assets/_layout-31c9014b.css",
     "src": "src/routes/+layout.css"
   },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-025cd789.css",
-    "src": "src/routes/+page.css"
+  "newSideBar.css": {
+    "file": "_app/immutable/assets/newSideBar-854aff46.css",
+    "src": "newSideBar.css"
   }
 }
