--- a/public/vite-manifest.json
+++ b/public/vite-manifest.json
@@ -1,109 +1,86 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-b87ec3f3.js",
+    "file": "_app/immutable/start-5d578af4.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-423627b2.js",
-      "_singletons-59c61bb8.js",
+      "_index-2277dafa.js",
+      "_singletons-72ddc848.js",
       "_preload-helper-b21cceae.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js",
-      ".svelte-kit/generated/nodes/3.js",
-      ".svelte-kit/generated/nodes/4.js"
+      ".svelte-kit/generated/nodes/2.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-118fb1cf.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-a1bc9647.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-423627b2.js"
+      "_index-2277dafa.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-31c9014b.css"
+      "_app/immutable/assets/_layout-829f8c0c.css"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-16cda11f.js",
+    "file": "_app/immutable/components/error.svelte-20ca6e14.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-423627b2.js",
-      "_singletons-59c61bb8.js"
+      "_index-2277dafa.js",
+      "_singletons-72ddc848.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-c536d20b.js",
+    "file": "_app/immutable/components/pages/_page.svelte-3447a181.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-423627b2.js",
-      "_secondaryButton-8ca68d79.js",
-      "_map-8540a5c1.js"
+      "_index-2277dafa.js",
+      "_preload-helper-b21cceae.js",
+      "_index-0eb2be02.js"
+    ],
+    "dynamicImports": [
+      "_leaflet-src-a1dff1fc.js"
     ],
     "css": [
       "_app/immutable/assets/_page-c901883e.css"
     ]
   },
-  "src/routes/new/+page.svelte": {
-    "file": "_app/immutable/components/pages/new/_page.svelte-1a0538bb.js",
-    "src": "src/routes/new/+page.svelte",
+  "src/routes/+page.ts": {
+    "file": "_app/immutable/modules/pages/_page.ts-f3057d31.js",
+    "src": "src/routes/+page.ts",
     "isEntry": true,
     "imports": [
-      "_index-423627b2.js",
-      "_secondaryButton-8ca68d79.js",
-      "_map-8540a5c1.js"
-    ],
-    "css": [
-      "_app/immutable/assets/newSideBar-854aff46.css"
+      "__page-1e809dc3.js"
     ]
   },
-  "src/routes/view/+page.svelte": {
-    "file": "_app/immutable/components/pages/view/_page.svelte-8a945378.js",
-    "src": "src/routes/view/+page.svelte",
-    "isEntry": true,
+  "_singletons-72ddc848.js": {
+    "file": "_app/immutable/chunks/singletons-72ddc848.js",
     "imports": [
-      "_index-423627b2.js",
-      "_map-8540a5c1.js"
-    ],
-    "css": [
-      "_app/immutable/assets/newSideBar-854aff46.css"
+      "_index-0eb2be02.js"
     ]
   },
-  "_singletons-59c61bb8.js": {
-    "file": "_app/immutable/chunks/singletons-59c61bb8.js",
+  "_index-2277dafa.js": {
+    "file": "_app/immutable/chunks/index-2277dafa.js"
+  },
+  "_index-0eb2be02.js": {
+    "file": "_app/immutable/chunks/index-0eb2be02.js",
     "imports": [
-      "_index-423627b2.js"
+      "_index-2277dafa.js"
     ]
-  },
-  "_index-423627b2.js": {
-    "file": "_app/immutable/chunks/index-423627b2.js"
   },
   "_preload-helper-b21cceae.js": {
     "file": "_app/immutable/chunks/preload-helper-b21cceae.js"
   },
-  "_map-8540a5c1.js": {
-    "file": "_app/immutable/chunks/map-8540a5c1.js",
-    "imports": [
-      "_index-423627b2.js",
-      "_preload-helper-b21cceae.js"
-    ],
-    "dynamicImports": [
-      "_leaflet-src-a1dff1fc.js"
-    ]
-  },
-  "_secondaryButton-8ca68d79.js": {
-    "file": "_app/immutable/chunks/secondaryButton-8ca68d79.js",
-    "imports": [
-      "_index-423627b2.js"
-    ]
+  "__page-1e809dc3.js": {
+    "file": "_app/immutable/chunks/_page-1e809dc3.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-9eb3d3e4.js",
+    "file": "_app/immutable/chunks/0-41f9d739.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -111,7 +88,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-09e4da4d.js",
+    "file": "_app/immutable/chunks/1-84113604.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -119,27 +96,12 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-fc8e8f51.js",
+    "file": "_app/immutable/chunks/2-3dc08dd0.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
+      "__page-1e809dc3.js",
       "src/routes/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-ee624524.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/new/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-d27f515d.js",
-    "src": ".svelte-kit/generated/nodes/4.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/view/+page.svelte"
     ]
   },
   "_leaflet-src-a1dff1fc.js": {
@@ -151,11 +113,7 @@
     "src": "src/routes/+page.css"
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-31c9014b.css",
+    "file": "_app/immutable/assets/_layout-829f8c0c.css",
     "src": "src/routes/+layout.css"
-  },
-  "newSideBar.css": {
-    "file": "_app/immutable/assets/newSideBar-854aff46.css",
-    "src": "newSideBar.css"
   }
 }
